@@ -1,12 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST pyScss-1.0.8.tar.gz 50947 RMD160 369e84205910b0e0a381935322d63d1e134d91dd SHA1 6b9aba2679a027e4bbaeaed3ad6470280ae273a8 SHA256 b95da8250f01dba09a122de6d4a7fdf59666e728f54304c7223274f62e44ff5b
 DIST pyScss-1.1.3.tar.gz 152075 RMD160 c6911fa8034b7417a0ad839b1e1d7e75f18a1e66 SHA1 6a31644572f2ee03c13390771fcf1b8400f6ec80 SHA256 75655300b62868ddfad7679a11e9810cd41a298eae06a76459ba5d60046de1c6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk8+GuMACgkQzJrj3cAXR0m/XwCgmd+9RWUfrYcekW3u2hIDOsrf
-3JkAoL2WryrknxMPRVvNC9kSThmfEKmy
-=a1qr
+iEYEAREKAAYFAk8/aO4ACgkQzJrj3cAXR0lhcACeKdkAEg8RoS9BoskR1LNQiRfN
+SBcAoI3k620AuIoVYPA3ysykaH8uCTG7
+=1PO+
 -----END PGP SIGNATURE-----
