@@ -4,11 +4,11 @@ DESCRIPTION=A Scss compiler for Python
 EAPI=3
 HOMEPAGE=http://pypi.python.org/pypi/pyScss/
 IUSE=test
-KEYWORDS=amd64 ~x86
+KEYWORDS=amd64 x86
 LICENSE=MIT
 RDEPEND=dev-python/setuptools >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
 RESTRICT=test
 SLOT=0
 SRC_URI=mirror://pypi/p/pyScss/pyScss-1.1.3.tar.gz
 _eclasses_=distutils	c8b0cab86443a130f3737ad1456d57d3	eutils	87297b51c585746a3759c390fa2cf24f	jnrowe-pypi	ec904774b8c8477cdb89043eb65c764c	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	portability	536c5e70c5fb252ed3b769e04aa3f05b	python	5526ca0199105d7b31120cf9d0bda586	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=cb5ffac8930fc4907fb0e56060f25b18
+_md5_=614fae108c7305b3881ccdf49225a2df
