@@ -1,4 +1,3 @@
-REM 2012-02-17 *1 MSG %"Stabilise x86 dev-python/pyscss-1.1.3%" %a
 REM 2012-02-17 *1 MSG %"Stabilise x86 dev-vcs/pepper-0.3%" %a
 REM 2012-02-17 *1 MSG %"Stabilise x86 dev-util/cake-0.2.2%" %a
 REM 2012-02-17 *1 MSG %"Stabilise x86 dev-python/isodate-0.4.6%" %a
