@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Feb 2012; James Rowe <jnrowe@gmail.com> -pyscss-1.0.8.ebuild,
+  pyscss-1.1.3.ebuild:
+  Keyworded x86.
+
   17 Feb 2012; James Rowe <jnrowe@gmail.com> pyscss-1.1.3.ebuild:
   Keyworded amd64.
 
